[其他] 更新内置 `jre` 到 `25.0.2` 版本 @4ra1n